css/main.css
@font-face {
  font-family: cm-serif;
  src: url("/fonts/cmunrm.ttf");
}
@font-face {
  font-family: cm-serif;
  font-weight: bold;
  src: url("/fonts/cmunbx.ttf");
}
@font-face {
  font-family: cm-serif;
  font-style: italic;
  src: url("/fonts/cmunti.ttf");
}
@font-face {
  font-family: cm-serif;
  font-style: italic;
  font-weight: bold;
  src: url("/fonts/cmunbi.ttf");
}

body {
  /* font-family: "Times New Roman", Times, serif; */
  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
  padding: 20px;
  background: #f1f1f1;
}

body p {
  font-family: cm-serif, "Times New Roman", Times, serif;
}

/* Header/Blog Title */
.header {
  text-align: center;
  background: white;
}

.header .main {
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 10px;
  padding-bottom: 10px;
  display: flex;
}

.header .main a {
  color: black;
}

.header .bar {
  justify-content: center;
  background-color: white;
  display: flex;
}

.header .bar a {
  background-color: white;
  text-align: center;
  height: 100%;
}

.header .bar a:hover {
  background-color: #ddd;
}

hr {
  width: 80%;
  height: 2px;
  border-width: 0;
  color: lightgray;
  background-color: lightgray;
}

.title {
  color: black;
  text-decoration: none;
  /* font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif; */
}

.title-span {
  box-sizing: border-box;
  display: inline-block;
  width: 25%;
}

/* Fake image */
.fakeimg {
  box-sizing: border-box;
  background-color: #aaa;
  width: 100%;
  padding: 20px;
}

/* Post Images */
.post-image {
  box-sizing: border-box;
  background-color: #eee;
  width: 100%;
  text-align: center;
  display: flex;
  justify-content: center;
  overflow: hidden;
}

.post-image img {
  max-height: 320px;
  max-width: 100%;
}

/* Compact Post Links */
.sp-div {
  box-sizing: border-box;
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
}

.sp-link {
  box-sizing: border-box;
  display: inline-block;
  background-color: #ddd;
  width: 100%;
  padding: 5px;
  text-decoration: none;
  color: black;
}

.sp-link:hover {
  background-color: #aaa;
  cursor: pointer;
}

/* Add a card effect for articles */
.card {
  background-color: white;
  padding: 20px;
  margin-top: 20px;
}

/* Footer */
.footer {
  padding: 20px;
  text-align: left;
  background: #ddd;
  margin-top: 20px;
}
.footer .main {
  display: flex;
}

.footer table td {
  padding-right: 32px;
}

